--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <properties>
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
+        <spring.version>5.2.12.RELEASE</spring.version>
+        <mysql.version>8.0.16</mysql.version>
     </properties>
 
 </project>
