--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>spring-lesson-04-spring-boot</module>
         <module>spring-lesson-05-hibernate</module>
     </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <spring.version>5.3.3</spring.version>
     </properties>
     
 </project>
