--- a/spring-lesson-09-rest-part1/src/main/resources/application.properties
+++ b/spring-lesson-09-rest-part1/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+springdoc.swagger-ui.path=/swagger-ui-custom.html
