--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>spring-lesson-09-rest-part1</module>
+        <module>spring-lesson-11-spring-security</module>
     </modules>
 
     <properties>
